--- a/patient-management-node/package.json
+++ b/patient-management-node/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.0",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
     "joi": "^14.3.1",
+    "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
     "pug": "^2.0.4"
   }
